--- a/.gitignore
+++ b/.gitignore
@@ -12,15 +12,16 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.development
+.env.production
+.eslintrc
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
-.env
-.env.development
-.env.production
 *.suo
 *.ntvs*
 *.njsproj
